--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,7 +60,8 @@
         android:id="@+id/etUsername"
         android:layout_below="@+id/textView_username"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:maxLength="15"/>
 
     <TextView
         android:layout_width="wrap_content"
