--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"  tools:context=".LogInActivityFragment">
+    android:layout_height="match_parent"  tools:context=".LogInActivityFragment"
+    android:background="@drawable/bottle_use">
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -8,18 +9,19 @@
         android:contentDescription="Ocean Background"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log In"
         android:id="@+id/bLogin"
         android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginTop="71dp"
         android:clickable="true"
-        android:layout_below="@+id/checkBox"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="69dp"
-        android:layout_marginStart="69dp" />
+        android:layout_below="@+id/anon_log_in"
+        android:layout_alignLeft="@+id/Tregister"
+        android:layout_alignStart="@+id/Tregister"
+        android:layout_alignRight="@+id/Tregister"
+        android:layout_alignEnd="@+id/Tregister"
+        android:background="#00BFFF"
+        android:layout_marginTop="15dp"/>
 
     <AutoCompleteTextView
         android:id="@+id/etUsername"
@@ -27,10 +29,12 @@
         android:layout_height="wrap_content" android:hint="@string/prompt_username"
         android:inputType="textAutoComplete" android:maxLines="1"
         android:singleLine="true"
-        android:layout_marginTop="82dp"
+        android:layout_marginTop="158dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/log_out"
+        android:layout_alignLeft="@+id/bLogin"
+        android:layout_alignStart="@+id/bLogin"
+        android:background="#FFFAF0" />
 
 
     <EditText
@@ -41,8 +45,12 @@
         android:id="@+id/etPassword"
         android:hint="@string/prompt_password"
         android:layout_below="@+id/etUsername"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignLeft="@+id/etUsername"
+        android:layout_alignStart="@+id/etUsername"
+        android:layout_alignRight="@+id/etUsername"
+        android:layout_alignEnd="@+id/etUsername"
+        android:background="#FFFAF0"
+        android:layout_marginTop="10dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -50,10 +58,12 @@
         android:text="Remember Me"
         android:id="@+id/checkBox"
         android:checked="false"
-        android:layout_below="@+id/etPassword"
         android:clickable="true"
         android:enabled="true"
-        android:allowUndo="true" />
+        android:allowUndo="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,14 +90,16 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:id="@+id/register"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_alignTop="@+id/bLogin"
-        android:layout_alignLeft="@+id/anon_log_in"
-        android:layout_alignStart="@+id/anon_log_in" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Not a member? Sign up here!"
+        android:id="@+id/Tregister"
+        android:layout_below="@+id/bLogin"
+        android:layout_toLeftOf="@+id/log_out"
+        android:layout_toStartOf="@+id/log_out"
+        android:clickable="true"
+        android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
