--- a/app/src/main/res/layout/fragment_static_bottles.xml
+++ b/app/src/main/res/layout/fragment_static_bottles.xml
@@ -30,31 +30,16 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapview"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapview"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent" />
-
-        <ImageButton
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/my_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_mylocation"/>
-    </RelativeLayout>
-
+        android:layout_height="0dp" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_below="@+id/mapview"
         android:id="@+id/static_bottles"
         android:scrollbars="vertical"
         />
