--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -18,7 +18,7 @@
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="snap"
             android:minHeight="?attr/actionBarSize">
         </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
@@ -29,10 +29,12 @@
             android:orientation="vertical"
             android:layout_below="@+id/coord_layout"
             android:background="@color/colorPrimaryDark">
-            <TextView
-                android:layout_width="wrap_content"
+            <Spinner
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:id="@+id/bottle_types"
+                android:background="@color/colorAccent"
+                />
             <EditText
                 android:id="@+id/message_edit"
                 android:layout_width="fill_parent"
@@ -42,5 +44,6 @@
                 android:layout_margin="@dimen/fab_margin"
                 android:hint="Put yar message here, ya land lubber!"
                 android:background="@drawable/paper_texture"/>
+
         </LinearLayout>
 </RelativeLayout>
