--- a/app/src/main/res/layout/recyclerview_bottle.xml
+++ b/app/src/main/res/layout/recyclerview_bottle.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/card_title"
+            android:id="@+id/pirate_mast_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -27,14 +27,14 @@
             android:layout_alignParentTop="true" />
 
         <TextView
-            android:id="@+id/card_message"
+            android:id="@+id/pirate_mast_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Content"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:textSize="14dp"
-            android:layout_below="@+id/card_title"
+            android:layout_below="@+id/pirate_mast_title"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"/>
 
