--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+
+    <style name="MyDropDownNav" parent="">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:popupBackground">@color/colorPrimaryDark</item>
+        <item name="android:dropDownSelector">@color/colorAccent</item>
+    </style>
 </resources>
