Davy Jones' Locker:
Users can now see all of their pirate masts that have been planted
They can see the ratings [Not live updating, yet...]
They can delete posts if they choose.

Pirate Masts:

cleaned up a bit
Ratings are now live on pirate masts

Inventory:

Changed Davy Jones' Locker title to reflect user
Allow tabs to always fill the layout

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -26,7 +26,7 @@
 
     <!-- These do not work as they do not bring up fragments that are not preference fragments correctly.
     <header
-        android:fragment="com.yarmatey.messageinabottle.InventoryFragment"
+        android:fragment="com.yarmatey.messageinabottle.UserPirateMastFragment"
         android:title='@string/userTutorial'
         android:summary="@string/userTutorial_description"
         />
