--- a/app/src/main/res/layout/recyclerview_user.xml
+++ b/app/src/main/res/layout/recyclerview_user.xml
@@ -6,23 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    card_view:cardBackgroundColor="@color/colorPrimary">
 
     <RelativeLayout
         android:id="@+id/cardBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/pirate_mast_title"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Title"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
+            android:background="@color/colorAccent"
             android:textSize="20dp"
-            android:background="@color/colorAccent"/>
+            android:layout_alignBottom="@+id/delete"
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/pirate_mast_message"
@@ -31,11 +33,22 @@
             android:text="Content"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="14dp"
             android:layout_below="@+id/pirate_mast_title"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"/>
 
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/delete"
+            android:src="@android:drawable/ic_menu_delete"
+            android:contentDescription="delete"
+            android:onClick="deleteItem"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="24sp"
@@ -79,6 +92,7 @@
                 android:textColor="@color/colorAccent"
                 android:text="Scurvy! +0" />
         </LinearLayout>
+
 
     </RelativeLayout>
 
