--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,34 +4,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.yarmatey.messageinabottle.RegisterActivity">
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@drawable/log_in_screen"
-        android:scaleType="centerCrop"
-        android:contentDescription="Ocean Background"
-        android:id="@+id/Ocean" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Register Here"
-        android:id="@+id/register"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false" />
+    tools:context="com.yarmatey.messageinabottle.RegisterActivity"
+    android:background="@drawable/bottle_register">
 
     <Button
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="Register"
         android:id="@+id/bRegister"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="#2E9AFE"
+        android:layout_below="@+id/etPassword2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,36 +24,20 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Name :"
         android:id="@+id/textView_name"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/register"
+        android:layout_marginTop="129dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:id="@+id/etName"
         android:layout_below="@+id/textView_name"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Age :"
-        android:id="@+id/textView_age"
-        android:layout_below="@+id/etName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etAge"
-        android:layout_below="@+id/textView_age"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="your name"
+        android:background="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -76,17 +45,19 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Username :"
         android:id="@+id/textView_username"
-        android:layout_below="@+id/etAge"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/etName" />
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:id="@+id/etUsername"
         android:layout_below="@+id/textView_username"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="your unique username"
+        android:background="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -100,13 +71,15 @@
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/etPassword"
         android:layout_below="@+id/textView_password"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="select a strong password"
+        android:background="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -120,12 +93,14 @@
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/etPassword2"
         android:layout_below="@+id/textview_password"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="repeat password"
+        android:background="#ffffff" />
 
 </RelativeLayout>
