--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,68 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"  tools:context=".LogInActivityFragment">
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:src="@drawable/log_in_screen"
-            android:scaleType="centerCrop"
-            android:contentDescription="Ocean Background"/>
+    android:layout_height="match_parent"  tools:context=".LogInActivityFragment"
+    android:background="@drawable/bottle_use">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Log In"
-            android:id="@+id/bLogin"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_below="@+id/checkBox"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="16dp"
-            android:clickable="true" />
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:text="Log In"
+        android:id="@+id/bLogin"
+        android:clickable="true"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_below="@+id/checkBox"
+        android:layout_alignRight="@+id/etPassword"
+        android:layout_alignEnd="@+id/etPassword"
+        android:layout_alignLeft="@+id/etPassword"
+        android:layout_alignStart="@+id/etPassword"
+        android:background="#2E9AFE"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Not a member? Sign up here!"
+        android:id="@+id/register_here"
+        android:clickable="true"
+        android:textStyle="bold|italic"
+        android:layout_below="@+id/bLogin"
+        android:layout_alignLeft="@+id/etPassword"
+        android:layout_alignStart="@+id/etPassword"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:inputType="text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:id="@+id/etUsername"
-        android:layout_below="@+id/username_text" />
+        android:layout_marginTop="144dp"
+        android:hint="   Username"
+        android:background="#FFFFFF"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="45dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/etPassword"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/password_text"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Password"
-        android:id="@+id/password_text"
-        android:gravity="center_horizontal"
-        android:linksClickable="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:hint=" Password"
+        android:background="#ffffff"
         android:layout_below="@+id/etUsername"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        android:id="@+id/username_text"
-        android:gravity="center_horizontal"
-        android:linksClickable="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="181dp" />
+        android:layout_alignLeft="@+id/etUsername"
+        android:layout_alignStart="@+id/etUsername" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -70,10 +63,13 @@
         android:text="Remember Me"
         android:id="@+id/checkBox"
         android:checked="false"
-        android:layout_below="@+id/etPassword"
         android:clickable="true"
         android:enabled="true"
-        android:allowUndo="true" />
+        android:allowUndo="true"
+        android:layout_below="@+id/etPassword"
+        android:layout_alignLeft="@+id/bLogin"
+        android:layout_alignStart="@+id/bLogin"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -81,19 +77,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Anonymous Log In"
         android:id="@+id/anon_log_in"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:clickable="true" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:id="@+id/register"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_below="@+id/bLogin"
-        android:layout_alignRight="@+id/anon_log_in"
-        android:layout_alignEnd="@+id/anon_log_in" />
+        android:clickable="true"
+        android:layout_below="@+id/register_here"
+        android:layout_alignRight="@+id/bLogin"
+        android:layout_alignEnd="@+id/bLogin" />
 
 </RelativeLayout>
