Pushing the latest

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -42,21 +42,21 @@
                 True: Adult Language Allowed
                 False: Adult Language Blocked
         -->
-        <SwitchPreference
-            android:key="sailor_switch"
-            android:title="@string/sailor_mouth"
-            android:summary="@string/sailor_mouth_description"
-            android:defaultValue="false"
-            android:persistent="true" />
+        <!--<SwitchPreference-->
+            <!--android:key="sailor_switch"-->
+            <!--android:title="@string/sailor_mouth"-->
+            <!--android:summary="@string/sailor_mouth_description"-->
+            <!--android:defaultValue="false"-->
+            <!--android:persistent="true" />-->
 
         <!-- Other Filters Menu
                 Links to another menu that allows the user to type in filter entries.
         -->
-        <Preference
-            android:title="@string/filters"
-            android:summary="@string/filters_description"
-            android:fragment="com.yarmatey.messageinabottle.login.LogInActivityFragment"
-            />
+        <!--<Preference-->
+            <!--android:title="@string/filters"-->
+            <!--android:summary="@string/filters_description"-->
+            <!--android:fragment="com.yarmatey.messageinabottle.login.LogInActivityFragment"-->
+            <!--/>-->
 
     </PreferenceScreen>
 
@@ -69,14 +69,14 @@
         android:persistent="true" />
 
     <!--TODO: IMPLEMENT COLOR SCHEMES-->
-    <ListPreference
-        android:key="color_list"
-        android:title="@string/color"
-        android:summary="@string/color_description"
-        android:entries="@array/color_titles"
-        android:entryValues="@array/color_values"
-        android:defaultValue="default"
-        android:persistent="true"/>
+    <!--<ListPreference-->
+        <!--android:key="color_list"-->
+        <!--android:title="@string/color"-->
+        <!--android:summary="@string/color_description"-->
+        <!--android:entries="@array/color_titles"-->
+        <!--android:entryValues="@array/color_values"-->
+        <!--android:defaultValue="default"-->
+        <!--android:persistent="true"/>-->
 
 
     <Preference
