--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -9,11 +9,11 @@
     <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppThemeLight.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="?attr/colorPrimary" app:popupTheme="@style/AppThemeLight.PopupOverlay"
             app:layout_scrollFlags="scroll|enterAlways"
             android:minHeight="?attr/actionBarSize">
         </android.support.v7.widget.Toolbar>
