--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#2A9CBE</color>
+
+    <color name="darkPrimary">#7B1FA2</color>
+    <color name="darkPrimaryDark">#4A148C</color>
+    <color name="darkAccent">#f44336</color>
 </resources>
